--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <p>
             Karma 币是⼀种⽤于记录和象征善⾏的⾮⾦融性数字资产，它承载着"善⾏值得被认可"的理
             念。我们希望，每⼀份善意都能被看见，每⼀位⾏善者都能被激励，从⽽⿎励更多⼈投⾝公
-            益。
+            益事业。
         </p>
         <p>
             然⽽，全球每天都在发⽣⽆数善⾏，从帮助弱势群体到⽀持社区发展，这些⾏为往往难以量
