--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="./style.css" />
         <meta
             name="description"
-            content="Mô tả ngắn gọn, hấp dẫn (tối đa 160 ký tự). Giải thích nội dung chính của trang."
+            content="Karma White Paper - The Meaning of Karma"
         />
         <meta name="keywords" content="karma, donation, karma today" />
         <meta name="author" content="karma" />
