--- a/index.html
+++ b/index.html
@@ -5,12 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="icon" type="image/svg+xml" href="./image/logo.png" />
         <title>Karma Today</title>
-        <link rel="stylesheet" href="./image/" />
         <link rel="stylesheet" href="./style.css" />
-        <meta
-            name="description"
-            content="Karma White Paper - The Meaning of Karma"
-        />
+        <meta name="description" content="Karma White Paper - The Meaning of Karma" />
         <meta name="keywords" content="karma, donation, karma today" />
         <meta name="author" content="karma" />
         <meta name="robots" content="index, follow" />
@@ -36,9 +32,16 @@
             </div>
             <div id="header">
                 <div class="logo">
-                    <img src="./image/logo.png" alt="karma" loading="lazy" />
+                    <a href="/">
+                        <img src="./image/logo.png" alt="karma-logo" loading="lazy">
+                    </a>
                 </div>
                 <div class="nav">
+                    <div class="nav-faq">
+                        <a href="/faq/">
+                            FAQ
+                        </a>
+                    </div>
                     <div class="nav-language">
                         <form>
                             <select id="lang-switch">
@@ -978,7 +981,7 @@
             <p>
                 <span class="strong pd-text">3. Amplification Effect: </span
                 >Charitable giving often attracts attention from media,
-                communities, and the public, helping to expand the impact of
+                communities, and the, helping to expand the impact of
                 philanthropy.
             </p>
             <span> The Global Landscape of Charitable Giving </span>
@@ -1003,7 +1006,7 @@
                 <strong>9%</strong>
             </p>
             <p class="pd-text">
-                <strong>• </strong> Public and Social Welfare: approximately
+                <strong>• </strong> and Social Welfare: approximately
                 <strong>8%</strong>
             </p>
             <p class="pd-text">
@@ -1059,7 +1062,7 @@
             <p class="pd-text">
                 <strong>4. Philanthropy Promotion:</strong> After the
                 fundraising organizer officially announces the donation, the
-                Karma team shares the related information through public
+                Karma team shares the related information through
                 channels to enhance awareness and amplify the impact of the
                 charitable action.
             </p>
@@ -1324,14 +1327,14 @@
                 goodwill on a broader scale, using Karma as a philanthropic
                 incentive tool. The fund operates with complete transparency—
                 every movement and expenditure of funds is recorded on the
-                blockchain, ensuring 100% traceability and enhancing public
+                blockchain, ensuring 100% traceability and enhancing
                 trust.
             </p>
             <p><strong> Key Features of Fund Operations:</strong></p>
             <p>
                 <span class="strong pd-text">• Full Transparency:</span> All
                 fund transactions and flows are recorded on-chain and are
-                publicly accessible.
+            ly accessible.
             </p>
             <p>
                 <span class="strong pd-text">• Karma-Only Donations:</span> The
@@ -1344,7 +1347,7 @@
                 <span class="strong pd-text"
                     >• Decentralized Governance Model:</span
                 >
-                The fund is governed by a publicly elected committee. This
+                The fund is governed by aly elected committee. This
                 committee submits charitable funding proposals weekly, with only
                 one proposal allowed to be executed per round. Proposals that
                 are not approved must be resubmitted.
@@ -1387,10 +1390,10 @@
                 the charitable nature and governance function of the Charity
                 Guardian NFTs while mitigating financial risk.
             </p>
-            <span>Public Good Reputation System</span>
+            <span Good Reputation System</span>
             <p>
                 To further incentivize philanthropic behavior, Karma plans to
-                launch a <strong>Public Good Reputation System—</strong>a
+                launch a <strong Good Reputation System—</strong>a
                 transparent and fair reputation scoring mechanism based on
                 contributions made through Karma tokens.
             </p>
@@ -1513,7 +1516,7 @@
             <p>
                 Looking ahead, Karma will continue to improve and expand the
                 features of its philanthropic ecosystem, striving to build a
-                global public good network that is transparent, trustworthy, and
+                global good network that is transparent, trustworthy, and
                 efficient—where every good deed is clearly visible, and every
                 reward is genuinely verifiable.
             </p>
