change page faq

--- a/index.html
+++ b/index.html
@@ -31,11 +31,9 @@
                 <img src="./image/background.png" alt="" loading="lazy" />
             </div>
             <div id="header">
-                <div class="logo">
-                    <a href="/">
+                    <a href="/" class="logo">
                         <img src="./image/logo.png" alt="karma-logo" loading="lazy">
                     </a>
-                </div>
                 <div class="nav">
                     <div class="nav-faq">
                         <a href="/faq/">
@@ -43,12 +41,11 @@
                         </a>
                     </div>
                     <div class="nav-language">
-                        <form>
-                            <select id="lang-switch">
-                                <option value="en">ENG</option>
-                                <option value="cn" selected>汉语</option>
-                            </select>
-                        </form>
+                        <div id="lang-toggle">Language</div>
+                        <div id="lang-submenu" class="hidden">
+                            <div data-lang="en" class="lang active">ENG</div>
+                            <div data-lang="cn" class="lang">汉语</div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -1390,10 +1387,10 @@
                 the charitable nature and governance function of the Charity
                 Guardian NFTs while mitigating financial risk.
             </p>
-            <span Good Reputation System</span>
+            <span> Good Reputation System</span>
             <p>
                 To further incentivize philanthropic behavior, Karma plans to
-                launch a <strong Good Reputation System—</strong>a
+                launch a <strong>  Public Good Reputation System— </strong> a
                 transparent and fair reputation scoring mechanism based on
                 contributions made through Karma tokens.
             </p>
