--- a/faq/index.html
+++ b/faq/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Karma Q&A</title>
     <link rel="stylesheet" href="./index.css" />
+    <link rel="stylesheet" href="../style.css" />
     <meta name="description" content="Karma Today - Faq" />
     <meta name="keywords" content="karma, Faq" />
     <meta name="author" content="karma" />
@@ -25,67 +26,49 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
-<body data-bs-theme="dark">
-    <header>
-        <div class="logo">
-            <a href="/">
-                <img src="../image/logo.png" alt="karma-logo">
+<body>
+    <main>
+        <div id="header">
+            <a href="/" class="logo">
+                <img src="../image/logo.png" alt="karma-logo" loading="lazy">
             </a>
-        </div>
-        <div class="d-flex align-items-center">
-            <button id="theme-toggle" class="btn btn-outline-secondary me-3">
-                <svg class="theme-icon sun-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                    <path fill="currentColor" d="M18 12a6 6 0 1 1-12 0a6 6 0 0 1 12 0" />
-                    <path fill="currentColor" fill-rule="evenodd" d="M12 1.25a.75.75 0 0 1 .75.75v1a.75.75 0 0 1-1.5 0V2a.75.75 0 0 1 .75-.75M1.25 12a.75.75 0 0 1 .75-.75h1a.75.75 0 0 1 0 1.5H2a.75.75 0 0 1-.75-.75m19 0a.75.75 0 0 1 .75-.75h1a.75.75 0 0 1 0 1.5h-1a.75.75 0 0 1-.75-.75M12 20.25a.75.75 0 0 1 .75.75v1a.75.75 0 0 1-1.5 0v-1a.75.75 0 0 1 .75-.75" clip-rule="evenodd" />
-                    <path fill="currentColor" d="M4.398 4.398a.75.75 0 0 1 1.061 0l.393.393a.75.75 0 0 1-1.06 1.06l-.394-.392a.75.75 0 0 1 0-1.06m15.202 0a.75.75 0 0 1 0 1.06l-.392.393a.75.75 0 0 1-1.06-1.06l.392-.393a.75.75 0 0 1 1.06 0m-1.453 13.748a.75.75 0 0 1 1.061 0l.393.393a.75.75 0 0 1-1.06 1.06l-.394-.392a.75.75 0 0 1 0-1.06m-12.295 0a.75.75 0 0 1 0 1.06l-.393.393a.75.75 0 1 1-1.06-1.06l.392-.393a.75.75 0 0 1 1.06 0" opacity="0.5" />
-                </svg>
-                <svg class="theme-icon moon-icon d-none" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                    <path fill="currentColor" fill-rule="evenodd" d="M22 12c0 5.523-4.477 10-10 10a10 10 0 0 1-3.321-.564A9 9 0 0 1 8 18a8.97 8.97 0 0 1 2.138-5.824A6.5 6.5 0 0 0 15.5 15a6.5 6.5 0 0 0 5.567-3.143c.24-.396.933-.32.933.143" clip-rule="evenodd" opacity="0.5" />
-                    <path fill="currentColor" d="M2 12c0 4.359 2.789 8.066 6.679 9.435A9 9 0 0 1 8 18c0-2.221.805-4.254 2.138-5.824A6.47 6.47 0 0 1 9 8.5a6.5 6.5 0 0 1 3.143-5.567C12.54 2.693 12.463 2 12 2C6.477 2 2 6.477 2 12" />
-                </svg>
-            </button>
-            <div class="btn-home btn btn-outline-secondary">
-                <a href="/">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                        <g fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
-                            <path d="M9 21v-6a2 2 0 0 1 2-2h2a2 2 0 0 1 2 2" />
-                            <path d="M19 12h2l-9-9l-9 9h2v7a2 2 0 0 0 2 2h5.5m3.5-2h6m-3-3l3 3l-3 3" />
-                        </g>
-                    </svg>
-                </a>
-            </div>
-
-        </div>
-        
-    </header>
-    <div class="category-nav">
-        <div class="sourcing">
-            <a href="#" data-target="box1">Event Sourcing & Preparation</a>
-        </div>
-        <div class="witness">
-            <a href="#" data-target="box2">Witness & Minting</a>
-        </div>
-        <div class="allocation">
-            <a href="#" data-target="box3">Allocation</a>
-        </div>
-    </div> 
-    <section id="container">
-        <div class="faq-container">
-            <div id="bg-tit">
-                <h1>Frequently Asked Questions</h1>
-            </div>
-            <div class="faq-container_content">
-                <!-- Dynamically populated by faq.js -->
+            <div class="nav">
+                <div class="nav-faq" id="nav-faq">
+                    <a href="#">FAQ</a>
+                </div>
+                <div class="category-nav" id="category-nav">
+                    <div class="sourcing active">
+                        <a href="#" data-target="box1">Event Sourcing & Preparation</a>
+                    </div>
+                    <div class="witness">
+                        <a href="#" data-target="box2">Witness & Minting</a>
+                    </div>
+                    <div class="allocation">
+                        <a href="#" data-target="box3">Allocation</a>
+                    </div>
+                </div>
+                <div class="nav-language">
+                    <div id="lang-toggle">Language</div>
+                    <div id="lang-submenu" class="hidden">
+                        <div data-lang="en" class="lang active">ENG</div>
+                        <div data-lang="cn" class="lang">汉语</div>
+                    </div>
+                </div>
             </div>
         </div>
-    </section>
-    <footer class="text-center p-3">
-        <p>© 2025 Karma</p>
-    </footer>
+        <section id="container">
+            <div class="faq-container">
+                <div id="bg-tit">
+                    <h1>Frequently Asked Questions</h1>
+                </div>
+                <div class="faq-container_content">
+                    <!-- Dynamically populated by script -->
+                </div>
+            </div>
+        </section>
+    </main>
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <!-- Theme Toggle JS -->
-    <script src="./theme-toggle.js"></script>
     <!-- FAQ JS -->
     <script src="./index.js"></script>
 </body>
