--- a/faq/index.html
+++ b/faq/index.html
@@ -37,6 +37,11 @@
                     <a href="#">FAQ</a>
                 </div>
                 <div class="category-nav" id="category-nav">
+                    <div class="close-btn_nav"> 
+                        <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24">
+                            <path fill="#fff" d="M6.4 19L5 17.6l5.6-5.6L5 6.4L6.4 5l5.6 5.6L17.6 5L19 6.4L13.4 12l5.6 5.6l-1.4 1.4l-5.6-5.6z" />
+                        </svg>
+                    </div>
                     <div class="sourcing active">
                         <a href="#" data-target="box1">Event Sourcing & Preparation</a>
                     </div>
