--- a/faq/index.html
+++ b/faq/index.html
@@ -35,7 +35,9 @@
             </a>
             <div class="nav">
                 <div class="nav-faq" id="nav-faq">
-                    <a href="#">FAQ</a>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24">
+                        <path fill="#fff" d="M4 18q-.425 0-.712-.288T3 17t.288-.712T4 16h16q.425 0 .713.288T21 17t-.288.713T20 18zm0-5q-.425 0-.712-.288T3 12t.288-.712T4 11h16q.425 0 .713.288T21 12t-.288.713T20 13zm0-5q-.425 0-.712-.288T3 7t.288-.712T4 6h16q.425 0 .713.288T21 7t-.288.713T20 8z" />
+                    </svg>
                 </div>
                 <div class="category-nav" id="category-nav">
                     <div class="close-btn_nav"> 
@@ -52,17 +54,17 @@
                     <div class="allocation">
                         <a href="#" data-target="box3">Allocation</a>
                     </div>
-                </div>
-                <div class="nav-language">
-                    <div id="lang-toggle">Language</div>
-                    <div id="lang-submenu" class="hidden">
-                        <div data-lang="en" class="lang active">ENG</div>
-                        <div data-lang="cn" class="lang">汉语</div>
+                    <div class="nav-language">
+                        <div id="lang-toggle">Language</div>
+                        <div id="lang-submenu" class="hidden">
+                            <div data-lang="en" class="lang active">ENG</div>
+                            <div data-lang="cn" class="lang">汉语</div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-        <section id="container">
+        <section id="container-f">
             <div class="faq-container">
                 <div id="bg-tit">
                     <h1>Frequently Asked Questions</h1>
