--- a/faq.html
+++ b/faq.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Karma Q&A</title>
-    <link rel="stylesheet" href="./index.css" />
-    <link rel="stylesheet" href="../style.css" />
+    <link rel="stylesheet" href="./css/faq.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <meta name="description" content="Karma Today - Faq" />
     <meta name="keywords" content="karma, Faq" />
     <meta name="author" content="karma" />
@@ -13,7 +13,7 @@
     <!-- Canonical URL -->
     <link rel="canonical" href="./index.html" />
     <!-- Favicon -->
-    <link rel="icon" href="../image/logo.png" type="image/x-icon" />
+    <link rel="icon" href="./image/logo.png" type="image/x-icon" />
     <!-- Open Graph (Facebook, Zalo, v.v.) -->
     <meta property="og:title" content="Karma Today - Faq" />
     <meta property="og:description" content="karma today Faq" />
@@ -28,10 +28,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
 </head>
 <body>
-    <main>
+    <div id="main">
         <div id="header">
             <a href="/" class="logo">
-                <img src="../image/logo.png" alt="karma-logo" loading="lazy">
+                <img src="./image/logo.png" alt="karma-logo" loading="lazy">
             </a>
             <div class="nav">
                 <div class="nav-faq" id="nav-faq">
@@ -55,10 +55,10 @@
                 </div>
             </div>
         </section>
-    </main>
+    </div>
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <!-- FAQ JS -->
-    <script src="./index.js"></script>
+    <script src="./js/faq.js"></script>
 </body>
 </html>
